Add Optimizer Vault vulnerability

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "hardhat compile",
     "clean": "rm -rf cache artifacts typechain typechain-types",
     "test": "hardhat test test/*.ts",
-    "test:longer": "hardhat test test/longer/*.ts",
+    "longer": "hardhat test test/longer/*.ts",
     "attack1": "hardhat test test/1-call-attack-1.ts",
     "attack2": "hardhat test test/1-call-attack-2.ts",
     "attack3": "hardhat test test/1-call-attack-3.ts",
@@ -17,7 +17,7 @@
     "dos2": "hardhat test test/3-dos-2.ts",
     "dos3": "hardhat test test/3-dos-3.ts",
     "dao1": "hardhat test test/2-dao-attack-1.ts",
-    "dao2": "hardhat test test/2-dao-attack-2.ts",
+    "dao2": "hardhat test test/longer/2-dao-attack-2.ts",
     "dao3": "hardhat test test/2-dao-attack-3.ts",
     "sensitive2": "hardhat test test/0-sensitive-on-chain-data-2.ts",
     "sensitive3": "hardhat test test/0-sensitive-on-chain-data-3.ts",
